# PortswiggerAcademyLabs

./: README.md
Authentication/Lab_2FA_Broken_Logic/: README.md  ti_2fa_broken_logic.py
Authentication/Lab_2FA_Bypass_Using_A_Brute_Force_Attack/: README.md
Authentication/Lab_2FA_Bypass_Using_A_Brute_Force_Attack/mfa-force/: Cargo.toml  flake.nix
Authentication/Lab_2FA_Bypass_Using_A_Brute_Force_Attack/mfa-force/src/: main.rs
Authentication/Lab_Broken_Brute_Force_Protection_Multiple_Credentials_Per_Request/: README.md
Authentication/Lab_Username_Enumeration_Via_Different_Response/: README.md  ti_password_enum.py  ti_username_enum.py
Authentication/Lab_Username_Enumeration_Via_Response_Timing/: README.md  ti_password_brute_force.py  ti_username_enumeration_timing.py
Authentication/Lab_Username_Enumeration_Via_Subtly_Different_Responses/: README.md  ti_subtle_difference_password_enum.py  ti_subtle_difference_username_enum.py
SQL_Injection/Lab_SQL_Injection_Attach_Listing_The_Database_Contents_On_Oracle/: README.md
SQL_Injection/Lab_SQL_Injection_Attack_Listing_The_Database_Contents_On_Non_Oracle_Databases/: README.md
SQL_Injection/Lab_SQL_Injection_Attack_Querying_The_Database_Type_And_Version_On_MySQL_And_Microsoft/: README.md
SQL_Injection/Lab_SQL_Injection_Attack_Querying_The_Database_Type_And_Version_On_Oracle/: README.md
SQL_Injection/Lab_SQL_Injection_UNION_Attack_Determining_The_Number_Of_Columns_Returned_By_The_Query/: README.md
SQL_Injection/Lab_SQL_Injection_Vulnerability_Allowing_Login_Bypass/: README.md
list_to_json/: list_to_json.py
(+2 files in other folders)
