[package]
name = "mfa-force"
version = "0.1.0"
edition = "2024"

[dependencies]
url = { version = "2.5.8" }
reqwest = { version = "0.13.4", features = ["cookies"] }
tokio = { version = "1.53.1", features = ["full"] }
clap = { version = "4.6.3", features = ["derive"] }
regex = { version = "1.13.1" }
thiserror = "2.0.19"
rand = "0.10.2"
